--- a/FrontEnd/src/Components/header.css
+++ b/FrontEnd/src/Components/header.css
@@ -18,7 +18,7 @@ a {
 .lang select {
   border: #2e2d2c4d solid 0.1px;
   border-radius: 20px;
-  padding: 5px 8px;
+  padding: 3px;
   color: #00000096;
 }
 .mainlinks {
@@ -79,7 +79,12 @@ a {
   font-weight: bold;
   margin-right: 10px;
 }
-
+.curr .sel {
+  border-radius: 20px;
+  padding: 3px;
+  margin: 0px 4px;
+  border: #2e2d2c4d solid 0.1px;
+}
 @media (max-width: 450px) {
   .links {
     font-size: 10px;
